# Die-Features

./: .gitignore  Die-Features.sln  DieInstaller.iss  LICENSE  README.md
DieInfoTool/: InfoTool.vcxproj  InfoTool.vcxproj.filters  Source.def
DieInfoTool/include/: CFileDetailsShellExt.h  ClassFactory.h  MetadataHandlers.h  die.h  dllmain.h
DieInfoTool/lib/: die.lib
DieInfoTool/src/: CFileDetailsShellExt.cpp  MetadataHandlers.cpp  dllmain.cpp
DieInstaller/: Program.cs
DieProperty/: ClassFactory.cpp  DieProperty.vcxproj  DieProperty.vcxproj.filters  Prop.cpp  Source.def  dllmain.cpp
DieProperty/res/: Resource.aps
DieService/: DieService.cpp  DieService.vcxproj  DieService.vcxproj.filters
DieService/include/: DieService.h  ToastNotification.h
DieService/src/: DieService.cpp
DieShellExtension/: DieShellExtension.vcxproj  DieShellExtension.vcxproj.filters  ShellEx.cpp
DieShellExtension/res/: Resource.rc
DieShellExtension/src/: dllmain.cpp
PanePreview/: PanePreview.vcxproj  PanePreview.vcxproj.filters  Source.def
PanePreview/include/: MyFilePreviewHandler.h  Reg.h
PanePreview/src/: MyFilePreviewHandler.cpp  Reg.cpp  dllmain.cpp
TaskBarHelper/: CMakeLists.txt
TaskBarHelper/MainApp/: CMakeLists.txt
TaskBarHelper/MainApp/src/: WindowsProject1.cpp
TaskBarHelper/TaskbarHelper/: CMakeLists.txt
TaskBarHelper/TaskbarHelper/include/: TaskbarHelper.h
TaskBarHelper/TaskbarHelper/src/: TaskbarHelper.cpp
